kubernetes/vets-service-deployment.yaml
# vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: ${NAMESPACE}
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - name: vets-service
        image: asia-northeast1-docker.pkg.dev/demoforgaudiy/docker-local/spring-petclinic-vets-service:${VETS_SERVICE_VERSION}
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: ${CPU_LIMIT}
            memory: ${MEMORY_LIMIT}
          requests:
            cpu: ${CPU_REQUEST}
            memory: ${MEMORY_REQUEST}
---
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: vets-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
